# tracing-eventlog

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: build.yml
res/: eventmsgs.lib  eventmsgs.mc  eventmsgs.mc.tmpl  eventmsgs.rs
src/: error.rs  eventlog.rs  eventmsgs.rs  lib.rs  lib_test.rs  registry.rs
tests/: test.rs
