[package]
edition = "2021"
name = "tracing-eventlog"
version = "0.1.0"

[dependencies]
rand = "0.8.5"
thiserror = "1.0.32"
tracing = "0.1.36"
tracing-core = "0.1.29"
tracing-subscriber = {version = "0.3.15", feaures = ["registry"]}
utfx = "0.1.0"
widestring = "1.0.2"

[target.'cfg(windows)'.dependencies]
registry = "1.2.2"
windows = {version = "0.39.0", features = ["Win32_System_EventLog", "Win32_Foundation"]}

[target.'cfg(windows)'.build-dependencies]
embed-resource = "1.7.3"

[build-dependencies]
regex = {version = "1.6.0", features = ["std", "unicode-perl"], default-features = false}
sha2 = "0.10.2"

[dev-dependencies]
chrono = "0.4.22"
mockall = "0.11.2"
mockall_double = "0.3.0"
