[package]
edition = "2024"
name = "tracing-eventlog"
version = "0.1.0"

[dependencies]
thiserror = "2"
tracing = "0.1.36"
tracing-core = "0.1.29"
tracing-subscriber = {version = "0.3.19", features = ["registry"]}
utfx = "0.1.0"
widestring = "1.0.2"

[target.'cfg(windows)'.dependencies]
registry = "1.2.2"
windows = {version = "0.61", features = ["Win32_System_EventLog", "Win32_Foundation", "Win32_Security"]}

[target.'cfg(windows)'.build-dependencies]
embed-resource = "3"

[build-dependencies]
regex = {version = "1.6.0", features = ["std", "unicode-perl"], default-features = false}
sha2 = "0.10.2"

[dev-dependencies]
chrono = "0.4.41"
mockall = "0.13.1"
mockall_double = "0.3.1"
